[package]
name = "s3-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO remove anyhow
anyhow = "1.0"
async-trait = "0.1"
clap = {version = "4.2.7", features = ["derive"]}
firestore = "0.32"
# TODO feature gate these to shrink the build size
hyper = { version = "0.14", features = ["full"] }
s3s = "0.5"
serde = { version = "1.0", features = ["derive"] }
# TODO feature gate these to shrink the build size
tokio = { version = "1", features= ["full"]}