[package]
name = "s3-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO remove anyhow
anyhow = "1.0"
async-trait = "0.1"
bitmaps = "3.2.0"
bytes = "1.4.0"
chrono = "0.4.24"
clap = {version = "4.2.7", features = ["derive"]}
firestore = "0.32"
futures = "0.3.28"
google-cloud-default = {version = "0.2.0", features = ["storage"]}
google-cloud-storage = "0.11.0"
hashbrown = "0.13"
# TODO feature gate these to shrink the build size
hyper = { version = "0.14", features = ["full"] }
libipld = "0.16"
log = "0.4.17"
logging = "0.1.0"
multihash = "0.18"
reqwest = {version = "0.11.18", features = ["stream"]}
s3s = "0.5"
serde = { version = "1.0", features = ["derive"] }
# TODO feature gate these to shrink the build size
tokio = { version = "1", features= ["full"]}
uuid = {version="1.3.3", features=["v4"]}
wnfs = "0.1"
